# expenses-app

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  email_tracking.json  env.example  payment_tracking_log.json  pyproject.toml  pytest.ini  receipt_processor.py  requirements.txt  run_tests.py  setup.py
.cursor/rules/: generate-tasks.mdc  tasklist_mgmt.mdc
.github/workflows/: ci.yml
config/: default.env
docs/: API_DOCUMENTATION.md  ARCHITECTURE_DIAGRAMS.md  CODE_DOCUMENTATION.md  CONFIGURATION_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FAQ.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  USER_MANUAL.md
examples/: email_system_example.py  email_workflow_example.py  file_management_example.py  reporting_example.py  status_tracking_example.py  storage_example.py
scripts/: build.py  release.py
src/receipt_processor/: __init__.py  ai_vision.py  cli.py  concurrent_processor.py  config.py  config_loader.py  config_manager.py  daemon.py  data_parser.py  email_cli.py  email_system.py  email_workflow.py  error_handling.py  file_manager.py  file_monitor.py  image_processor.py  main.py  models.py  payment_models.py  payment_reporting.py  payment_storage.py  payment_validation.py  payment_workflow.py  reporting.py  status_tracker.py  storage.py  system_monitoring.py
src/receipt_processor/ai_providers/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py  provider_factory.py  provider_registry.py
src/receipt_processor/categorization/: __init__.py  base.py  rule_based_categorizer.py
src/receipt_processor/duplicate_detection/: __init__.py  base.py  rule_based_detector.py
src/receipt_processor/multilingual/: __init__.py  base.py  language_detector.py
src/receipt_processor/templates/: batch_templates.py
tasks/: PRD_Receipt_Processor.md  Task_List_Receipt_Processor.md
tests/: conftest.py  test_cli.py  test_data_parser.py  test_e2e_processing.py  test_email_system.py  test_email_workflow.py  test_file_manager.py  test_file_monitor.py  test_image_processor.py  test_integration_cli.py  test_models.py  test_payment_tracking.py  test_performance.py  test_reporting.py  test_status_tracker.py  test_storage.py  test_unit_error_handling.py  test_unit_models.py  test_unit_system_monitoring.py
